# cvoice

./: .gitignore  CLAUDE.md  README.md  __init__.py  cli.py  cvoice.py  pyproject.toml  readme.md  requirements.txt  setup.py
audio/: extractor.py  merger.py  synthesizer.py
src/cvoice/: __init__.py
src/cvoice/cli/: __init__.py  main.py
src/cvoice/core/: __init__.py  audio_extractor.py  base.py  pipeline.py  speech_to_text.py  text_improver.py  text_to_speech.py  video_merger.py
src/cvoice/models/: __init__.py  base.py  tts_model.py  whisper_model.py
src/cvoice/utils/: __init__.py  audio_utils.py  file_utils.py  logging_utils.py
tests/: __init__.py  conftest.py  test_extractor.py  test_improver.py  test_merger.py  test_recongnizer.py  test_synthesizer.py
tests/test_core/: test_pipeline.py
tests/test_utils/: test_file_utils.py
text/: improver.py  recognizer.py
utils/: __init__.py  file_handler.py  logger.py
